tests/Errors/SyntaxError/unexpectedSemicolon.neon
[
  @Error(
    kind: 'SyntaxError'
    message: '''
	Parse error in file %rootDir%/tests/Errors/SyntaxError/unexpectedSemicolon.php:
	Syntax error, unexpected ';', expecting '{' on line 6
'''
  ),
]
